@@ -80,7 +80,7 @@ set printenvScript [makeFile {
 	TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH PURE_PROG_NAME DISPLAY
 	SHLIB_PATH SYSTEMDRIVE SYSTEMROOT DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH
 	DYLD_NEW_LOCAL_SHARED_REGIONS DYLD_NO_FIX_PREBINDING
-	__CF_USER_TEXT_ENCODING SECURITYSESSIONID
+	__CF_USER_TEXT_ENCODING SECURITYSESSIONID LANG WINDIR TERM
     } {
 	lrem names $name
     }
@@ -112,7 +112,7 @@ foreach name [array names env] {
 	    TCL_LIBRARY PATH LD_LIBRARY_PATH LIBPATH DISPLAY SHLIB_PATH
 	    SYSTEMDRIVE SYSTEMROOT DYLD_LIBRARY_PATH DYLD_FRAMEWORK_PATH
 	    DYLD_NEW_LOCAL_SHARED_REGIONS DYLD_NO_FIX_PREBINDING
-	    SECURITYSESSIONID
+	    SECURITYSESSIONID LANG WINDIR TERM
     }} {
 	unset env($name)
     }
